# BainesImageQuizzer

./: .gitignore  CMakeLists.txt  Image Quizzer Installation.docx  ImageQuizzer.bat  ImageQuizzer.xsd  ImageQuizzerShutdown.bat  ImageQuizzerSliceletStartupScript.py  ImageQuizzerStartup-USB.bat  ImageQuizzerStartup.bat  PostprocessorLabelledImageToDicom.bat  PostprocessorNrrdToDicom.bat  PostprocessorVolumeToDicom.bat  README.md  SlicerPythonInteractor.bat  USB-UpdateSlicerExtensionList.py  USB01-RunScriptShell.py  ~$age Quizzer Installation.docx
Documentation/: 3D Slicer - Keyboard Shortcuts.docx  CodingConventions.txt  Image Quizzer Installation.docx  ReadMe.txt  ReleaseNotes v1.0.0.txt  ReleaseNotes v2.0.0.txt  ReleaseNotes v2.1.0.txt  ReleaseTimeLine.pptx  WIP.xlsx  XML ElementsAndAttributes.xlsx  XML LayoutAndAttributes.xlsx  ~$age Quizzer Installation.docx
Documentation/ReleaseNotes/: ReleaseNotes v1.0.0.txt  ReleaseNotes v2.1.0.txt  ReleaseNotes v2.2.1.txt
ImageQuizzer/: CMakeLists.txt  CodingConventions.txt  DICOMVolumeSequencePlugin.py  DICOMWidgets.py  HelperBox2.py  Image.py  ImageQuizzer.py  ImageView.py  LabelledImageToDicomGenerator.py  NrrdToDicomPostprocessor.py  Page.py  PageState.py  Question.py  QuizzerDICOMUtils.py  QuizzerEditor.py  QuizzerHelperBox.py  Session.py  TargetItem.py  TestQuestion.py  UserInteraction.py  Utilities.py  UtilsIO.py  UtilsIOXml.py  ViewingNode.py  VolumeToDicomGenerator.py
USB-Support/: README - Startup-USB.txt  Start Image Quizzer.bat  USB01-RunScriptShell.py  USB02-UpdateSlicerExtensionList.py
(+1219 files in other folders)
